--- a/site/index.html
+++ b/site/index.html
@@ -6,6 +6,5 @@
 	<title> Hello Coursera!</title>
 </head>
 <body>
-<h1> Hello Coursera! It's a wonderful day<h1>
-</body>
+<h1> Hello Coursera! GGGGGG
 </html>
